# GalamseyWatch

./: .gitignore  LICENSE  README.md
orchestrator/: README.md  pyproject.toml
orchestrator/agentic_eo/: __init__.py  aoi.py  events.py  main.py  pass_runner.py  schema.py  simsat_client.py  store.py
orchestrator/scripts/: benchmark_policies.py  fetch_diverse_validation_tiles.py
training/: .gitignore  README.md  pyproject.toml
training/configs/: galamsey_probe.yaml  galamsey_tiny.yaml  galamsey_unified_v1_modal.yaml  galamsey_unified_v2_modal.yaml  galamsey_unified_v3_modal.yaml  galamsey_unified_v4_1_multitask_modal.yaml  galamsey_unified_v4_multitask_modal.yaml  galamsey_v1.yaml  galamsey_v10_450m_aug_modal.yaml  galamsey_v1_eval.yaml  galamsey_v1_modal.yaml  galamsey_v2_modal.yaml  galamsey_v3_modal.yaml  galamsey_v4_rgb_modal.yaml  galamsey_v5_multiimage_modal.yaml  galamsey_v6_changedetect_modal.yaml  galamsey_v7_1.6b_modal.yaml  galamsey_v7_1.6b_resume_modal.yaml  galamsey_v8_450m_aug_modal.yaml  galamsey_v9_450m_aug_modal.yaml
training/galamseywatch/: __init__.py  composites.py  constants.py  masks.py  vlm_format.py
training/scripts/: build_expanded_eval_dataset.py  build_unified_v1_sft_dataset.py  build_unified_v2_sft_dataset.py  build_unified_v4_1_multitask_dataset_modal.py  build_unified_v4_multitask_dataset_modal.py  compute_bbox_ceiling_modal.py  eval_base_pixel_iou_modal.py  eval_two_layer_baseline_modal.py  eval_two_layer_baseline_modal_expanded.py  eval_two_layer_rich_context_modal.py  eval_two_layer_rich_context_modal_expanded.py  eval_unified_v1_action_match_modal.py  eval_unified_v2_action_match_modal.py  eval_unified_v2_action_match_modal_expanded.py  eval_unified_v3_action_match_modal.py  eval_unified_v3_action_match_modal_expanded.py  eval_unified_v4_1_action_match_modal_expanded.py  eval_unified_v4_1_perception_modal.py  eval_unified_v4_action_match_modal_expanded.py  eval_unified_v4_perception_modal.py  eval_v10_pixel_iou_modal.py  eval_v2_pixel_iou_modal.py  eval_v4_pixel_iou_modal.py  eval_v5_pixel_iou_modal.py  eval_v6_pixel_iou_modal.py  eval_v7_pixel_iou_modal.py  eval_v8_pixel_iou_modal.py  eval_v9_pixel_iou_modal.py  export_v8_onnx_liquid_modal.py  export_v8_onnx_modal.py  extract_v4_1_outputs_for_blog_modal.py  eyeball_eval_modal.py  (+26 more)
(+27 files in other folders)
