[project]
name = "agentic-eo"
version = "0.1.0"
description = "Reference template for two-layer agentic Earth observation on satellite-class compute. LFM2.5-VL perception + LFM2 tool-calling agent + DPhi SimSat."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "httpx>=0.27",
    # VLM perception layer — LFM2.5-VL-450M with the v9-e3 fine-tuned weights
    # loaded in-process via transformers. ~1 GB safetensors + torch wheel.
    "transformers>=4.55",
    "torch>=2.4",
    "torchvision>=0.20",
    "accelerate>=1.0",
    "pillow>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_eo"]
